# machine-learning-and-python-notes

./: README.md  pyproject.toml  requirements.txt  setup.py
deep-learning/: nn.md  overall.md
learning_lists/: attention_and_transformers.md
machine-learning/: 002-feature-engineering.md  003-dealing-with-real-world-data.md  004-a-b-testing.md  005-evaluation-metrics.md  006-end-to-end-machine-learning-project.md  007-anomaly-detection.md  008-cd4ml.md  machine-learning-summary.md
machine_learning/: 001-hyperparameters-and-model-validation.md  003-dealing-with-real-world-data.md  006-end-to-end-machine-learning-project.md  007-anomaly-detection.md  009-end-to-end-machine-learning-design.md  009-time-series-prediction.md  machine-learning-summary.md
ml-interviews-book/: README.md  chapter5.md  chapter7.md  chapter8.md
mokarakaya_pytest_notes/: 001-test.md
neural_networks/: activation_functions.md  backpropagation.md  loss_functions.md  optimization_functions.md  overfitting_underfitting.md
nlp/: attention_transformers.md  embeddings.md  essentials.md  evaluation.md  llm_evaluation.md  llm_fine_tuning.md  named-entity-recognition.md  overall.md  retrieval_augmented_generation.md  transformer_models.md
probability/: 1-counting-methods.md  2-bayes-theorem.md
python/: 001-lists-and-directories.md  002-functions.md  003-comprehensions-and-generators.md  004-classes-and-interfaces.md  005-concurrency.md  006-practice.md  007-python2-vs-python3.md  008_operating_systems.md  notes.md
resources/: attention_and_transformers.md
statistics/: 3-hypothesis_testing.md  (+5 more)
(+67 files in other folders)
