[tool.poetry]
name = "machine-learning-and-python-notes"
version = "0.1.0"
description = ""
authors = ["mokarakaya <mokarakaya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.11.0"
torchvision = "^0.12.0"
black = "^22.3.0"
jupyterlab = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
